For 1.21.1
	- Macros to help "set" SF fields get used, when the equivalent "non set_" field is used.
	  eg, "set_orientation" inputOnly field in GeoViewpoint, when we have an initializeOnly "orientation" field.
	  Should rework all other nodes to use these macros. NOTE: MF fields are handled by the macro
	  EVIN_AND_FIELD_SAME.

For 1.21.0
	- VRMLNodes.pm - IndexedTriangle nodes; with increased checking, some fields were marked
	  "inputOnly" when they should have been "inputOutput" which gave routing warnings.

	- Billboard had some inconsistent rendering problems introduced in 1.20.6. Reverted
	  to older code.

	- Collision, support for both "collide" (vrml) "enabled" (x3d) fields verified.
	
	- Occlusionculling - when failed, textures not displayed, due to an optimization
	  for the texture loading scheduling algorithm.

	- start of ComposedShader and ShaderPart support.

	- Background - textures now working again, problem related to new scenegraph
	  structure resolved.

	- Background - provided more of a separation bewteen ground and sky backgrounds,
	  as it was possible, depending on z buffer depth, to have z-fighting going on.

	- TextureBackground was not accepting set_bind events; fixed.

	- Event routing for "enabled" on all nodes with this field, now working.

	- verify that events get sent for all Geospatial node fields that are not
	  inputOnly fields.

	- GeoTouchSensor code added.

	- GeoTransform code added.

	- Some routes on parsing initialization were not getting set.

	- Javascript - added SFVec3d support.

	- XML parser - sanity check routing to ensure we route only to proper
	  locations; eg, do not allow routing to an initializeOnly field.

	- Occlusionculling - better performance when testing heavily textured objects
	  for draw status.

For 1.20.7
	- Examine mode - Viewpoint - does distance between 2 points in 3d to determine
	  rotation distance, as per the spec.
	
	- Occlusionculling had difficulties with DEF/USE nodes; fixed.
